# Pingus-World-Tour-UFOE

./: .gitignore  CMakeLists.txt  README.md  game.cpp  project.py
UFO-Engine/: CMakeLists.txt
UFO-Engine/res/: CMakeListsWindows.txt
UFO-Engine/res/engine/: camera_icon.aseprite
UFO-Engine/res/engine_config/: config.json
UFO-Engine/src/actor/: actor.cpp  actor.h
UFO-Engine/src/asset_manager/: get_rect_from_index.cpp  get_rect_from_index.h  level_asset_manager.cpp  level_asset_manager.h
UFO-Engine/src/axis_aligned_collision/: axis_aligned_collision_body.cpp  axis_aligned_collision_body.h  axis_aligned_collision_system.cpp  axis_aligned_collision_system.h
UFO-Engine/src/camera/: camera.cpp  camera.h  transformations.cpp  transformations.h
UFO-Engine/src/collision/: collision_system.cpp  collision_system.h
UFO-Engine/src/console/: console.h
UFO-Engine/src/custom/: quad_tree_test.h
UFO-Engine/src/drawing_system/: drawing_system.cpp  drawing_system.h
UFO-Engine/src/file/: file_menu.h  (+1 more)
UFO-Engine/tools/: UFOProjectManager.py  UFO_variable_exporter.py  variable_exporter_test.py
res/: credits.txt  json_test_file.json
res/assets/: fall_death.aseprite  helicopter.aseprite  honey_coin_hud.aseprite  pingu_fall.aseprite  walking animation-SheetParachute.aseprite
src/: generated_actor_json_bridge.h  goal.h  honey_coin.h  item_select_menu.cpp  item_select_menu.h  level_select_menu.cpp  level_select_menu.h  pingu.h  pingus_level.cpp  pingus_level.h  pingus_main_menu.cpp  pingus_main_menu.h  quad_tree.h  quad_tree_variating_depth.h  result_screen.h  spawner.h
(+79 files in other folders)
